# fastapp

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .pyment  CONTRIBUTING.rst  LICENSE  README.rst  apps.html  badges.rst  contributing.html  example.py  examples.html  generation.html  genindex.html  index.html  logging.html  mkdocs.sh  modules.html  objects.inv  paper.bib  paper.md  parameters.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.html  testing.html  training.html  tuning.html  vision.html
.doctrees/: apps.doctree  contributing.doctree  environment.pickle  examples.doctree  generation.doctree  index.doctree  logging.doctree  modules.doctree  parameters.doctree  quickstart.doctree  setup.doctree  testing.doctree  training.doctree  tuning.doctree  vision.doctree
_sources/: apps.rst.txt  contributing.rst.txt  index.rst.txt  parameters.rst.txt  quickstart.rst.txt  setup.rst.txt  training.rst.txt  tuning.rst.txt  vision.rst.txt
coverage/: fastapp___init___py.html  fastapp_apps_py.html  fastapp_blocks_py.html  fastapp_callbacks___init___py.html  fastapp_callbacks_mlflow_py.html  fastapp_callbacks_py.html  fastapp_callbacks_wandb_py.html  fastapp_citations_py.html  fastapp_enums_py.html  fastapp_examples___init___py.html  fastapp_examples_image_classifier_py.html  fastapp_examples_iris_py.html  fastapp_examples_logistic_regression_py.html  fastapp_logging_py.html  fastapp_main_py.html  fastapp_metrics_py.html  fastapp_params_py.html  fastapp_testing_py.html  fastapp_tuning___init___py.html  fastapp_tuning_optuna_py.html  fastapp_tuning_skopt_py.html  fastapp_tuning_wandb_py.html  fastapp_util_py.html  fastapp_vision_py.html  index.html  status.json
docs/: conf.py  contributing.rst  examples.rst  generation.rst  index.rst  logging.rst  modules.rst  testing.rst  training.rst
fastapp/: __init__.py  apps.py  blocks.py  callbacks.py  citations.py  enums.py  fastapp.logging.html  logging.py  main.py  metrics.py  params.py  testing.py  util.py  vision.py
notebook_examples/: logistic_regression_example.html  logistic_regression_example.ipynb  wandb_example.html  wandb_example.ipynb
tests/: _test_wandblog.py  conftest.py  test_apps.py  (+14 more)
(+69 files in other folders)
