[tool.poetry]
name = "fastapp"
version = "0.1.0"
description = "A wrapper for fastai projects to create easy command-line inferfaces and manage hyper-parameter tuning."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.1"
numpy = "^1.22.0"
typer = "^0.4.0"
rich = "^10.16.1"
fastai = "^2.5.3"
pandas = "^1.3.5"
wandb = "^0.12.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastapp = "fastapp.main:app"
