[tool.poetry]
name = "fastapp"
version = "0.1.19"
description = "A wrapper for fastai projects to create easy command-line inferfaces and manage hyper-parameter tuning."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.1"
numpy = "^1.22.0"
typer = "^0.4.0"
rich = "^10.16.1"
fastai = "^2.5.3"
pandas = "^1.3.5"
wandb = "^0.12.9"
cookiecutter = "^1.7.3"
scikit-learn = "^1.0.2"
Pillow = "^9.0.1"
PyYAML = "^6.0"
click = "8.0.4"
torchvision = "0.11.3"
pybtex = "^0.24.0"
pyjwt = ">=2.4.0"
mlflow = "^1.25.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^8.1.1"
ipykernel = "^6.6.1"
coverage = "^5.5"
autopep8 = "^1.5.7"
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.2"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
black = "^21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}
jupyter = "^1.0.0"
pyment = "^0.3.3"

[tool.black]
line-length = 120
skip_string_normalization = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fastapp = "fastapp.main:app"
fastapp-iris = "fastapp.examples.iris:IrisApp.main"
fastapp-imageclassifier = "fastapp.examples.image_classifier:ImageClassifier.main"
